[gd_scene load_steps=19 format=3 uid="uid://cfcpp45j2o4f1"]

[ext_resource type="AudioStream" uid="uid://bc4s8yi4fb7xs" path="res://addons/ridiculous_coding/blip.wav" id="1"]
[ext_resource type="Script" path="res://addons/ridiculous_coding/blip.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cbytn1uiy4a8m" path="res://addons/ridiculous_coding/blip.png" id="3"]
[ext_resource type="FontFile" uid="uid://b8g6i8ibn2ngi" path="res://addons/ridiculous_coding/GravityBold8.ttf" id="4_qqbfx"]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource("3")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource("3")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource("3")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource("3")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource("3")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource("3")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource("3")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource("3")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="9"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("1")
}, {
"duration": 1.0,
"texture": SubResource("2")
}, {
"duration": 1.0,
"texture": SubResource("3")
}, {
"duration": 1.0,
"texture": SubResource("4")
}, {
"duration": 1.0,
"texture": SubResource("5")
}, {
"duration": 1.0,
"texture": SubResource("6")
}, {
"duration": 1.0,
"texture": SubResource("7")
}, {
"duration": 1.0,
"texture": SubResource("8")
}],
"loop": false,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="Animation" id="10"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Label:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Vector2(-35, -32), Vector2(-35, -70)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_26t7t"]
_data = {
"default": SubResource("10")
}

[sub_resource type="Gradient" id="11"]
offsets = PackedFloat32Array(0, 0.46383, 0.817021, 1)
colors = PackedColorArray(0.160156, 0.783478, 1, 1, 1, 0.564706, 0.952941, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="12"]
gradient = SubResource("11")

[sub_resource type="ParticleProcessMaterial" id="13"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 300.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
linear_accel_min = -700.0
scale_max = 4.0
color_ramp = SubResource("12")

[node name="Node2D" type="Node2D"]
texture_filter = 1
script = ExtResource("2")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(5, 5)
sprite_frames = SubResource("9")
frame = 7
frame_progress = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1")
volume_db = -12.0
autoplay = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
libraries = {
"": SubResource("AnimationLibrary_26t7t")
}

[node name="Particles2D" type="GPUParticles2D" parent="."]
amount = 100
process_material = SubResource("13")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
modulate = Color(0.356863, 0.807843, 0.980392, 1)
offset_left = -35.0
offset_top = -70.0
offset_right = -34.0
offset_bottom = -47.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("4_qqbfx")
uppercase = true

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite1_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
